# PacMan-OPENGL-FreeGLut

./: CMakeLists.txt  Cubo.sln  Figura2D.vcxproj  Figura2D.vcxproj.filters  README.md  colorcube.c  pm-maps.c  pm-maps.h  pm-simple.txt
Debug/: Figura2D.ilk  Figura2D.vcxproj.FileListAbsolute.txt  cubo.exe.recipe  cubo.ilk  pm-simple.txt  vc142.idb
Debug/Figura2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Figura2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/cubo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cubo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
